adjusted img height css to prevent imgs from scaling too large

--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -28,11 +28,8 @@ main {
 }
 
 .img-container {
-    width: 50%;
+    width: 20%;
     height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .dog-image {
